--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -43,7 +43,7 @@
 
         if (os.isPc) {
             // 跳转到PC版
-            // window.location.replace('http://aaron-fe.github.io/piaofanzi/index.html');
+            window.location.replace('http://aaron-fe.github.io/piaofanzi/index.html');
         }
     </script>
 </head>
@@ -147,8 +147,8 @@
         var mySkrollr;
 
         /*设定高度*/
-        // initHeight();
-        // $(window).resize(initHeight);
+        initHeight();
+        $(window).resize(initHeight);
 
         function initHeight() {
             window.scrollTo(0, 1);
