--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -147,8 +147,8 @@
         var mySkrollr;
 
         /*设定高度*/
-        initHeight();
-        $(window).resize(initHeight);
+        // initHeight();
+        // $(window).resize(initHeight);
 
         function initHeight() {
             window.scrollTo(0, 1);
