--- a/piaofanzi/mobile/index.html
+++ b/piaofanzi/mobile/index.html
@@ -113,7 +113,7 @@
             <p>www.piaofanzi.com<br>备案信息 2015-2016 All Right</p>
             <div class="link-group">
                 <a href="http://weibo.com/piaofanzivip?refer_flag=1001030201_&is_hot=1" target="_blank"><i class="fa fa-weibo"></i></a>
-                <a class="btn-wechat" href="javascript:;" target="_blank"><i class="fa fa-weixin"></i></a>
+                <span class="btn-wechat"><i class="fa fa-weixin"></i></span>
             </div>
         </footer>
         <div class="qrcode">
